--- a/package.json
+++ b/package.json
@@ -5,6 +5,18 @@
   "dependencies": {
     "@ionic/react": "^5.0.7",
     "@ionic/react-router": "^5.0.7",
+    "formik": "^2.1.7",
+    "ionicons": "^5.0.0",
+    "moment": "^2.27.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0",
+    "typescript": "3.8.3",
+    "yup": "^0.29.3"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.3",
@@ -14,13 +26,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
-    "ionicons": "^5.0.0",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
-    "typescript": "3.8.3"
+    "@types/yup": "^0.29.7"
   },
   "scripts": {
     "start": "react-scripts start",
