--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@capacitor/core": "^2.4.2",
+    "@capacitor/android": "^2.4.2",
+    "@capacitor/core": "2.4.2",
+    "@ionic-native/contacts": "^5.28.0",
     "@ionic/react": "^5.0.7",
     "@ionic/react-router": "^5.0.7",
+    "cordova-plugin-contacts": "^3.0.1",
     "formik": "^2.1.7",
     "ionicons": "^5.0.0",
     "moment": "^2.27.0",
@@ -18,6 +21,7 @@
     "yup": "^0.29.3"
   },
   "devDependencies": {
+    "@capacitor/cli": "2.4.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.3",
