changed launcher, fixed sos issue

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "io.ionic.starter",
+  "appId": "io.safe360.0",
   "appName": "safe360",
   "bundledWebRuntime": false,
   "npmClient": "npm",
