--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@capacitor/android": "^2.4.2",
-    "@capacitor/core": "2.4.2",
+    "@capacitor/core": "^2.4.2",
     "@ionic-native/contacts": "^5.28.0",
     "@ionic/react": "^5.0.7",
     "@ionic/react-router": "^5.0.7",
