--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "3.4.0",
     "socket.io-client": "^2.3.1",
     "typescript": "3.8.3",
+    "uuid": "^8.3.1",
     "yup": "^0.29.3"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
     "@types/socket.io-client": "^1.4.34",
+    "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.7"
   },
   "scripts": {
