--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,8 @@
   "name": "Anti-Rape App",
   "icons": [
     {
-      "src": "assets/icon/favicon-64x64.png",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "assets/icon/favicon.png",
+      "sizes": "144x144, 64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
