--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,9 @@
   "name": "Anti-Rape App",
   "icons": [
     {
-      "src": "assets/icon/favicon.png",
-      "sizes": "144x144, 64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "assets/icon/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
     },
     {
       "src": "assets/icon/icon-512x512.png",
